--- a/qp5rss_gyak6/qp5rss_gyak6/qp5rss_gyak6.csproj
+++ b/qp5rss_gyak6/qp5rss_gyak6/qp5rss_gyak6.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstractions\CarFactory.cs" />
+    <Compile Include="Entities\CarFactory.cs" />
     <Compile Include="Abstractions\IToyFactory.cs" />
     <Compile Include="Abstractions\Toy.cs">
       <SubType>Component</SubType>
@@ -58,6 +58,10 @@
     <Compile Include="Entities\Car.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Entities\Present.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Entities\PresentFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
